<resources>
    <string name="app_name">Whim</string>

    <string name="tab_text_search">Search</string>
    <string name="tab_text_favorite">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!--start of fragment_filter strings-->

    <string name="selection_p">Select Prices: </string>
    <string name="expensive">$$$$$</string>
    <string name="costly">$$$$</string>
    <string name="average">$$$</string>
    <string name="cheap">$$</string>
    <string name="v_cheap">$</string>

    <string name="selection_rating">Select Ratings:</string>
    <string name="excellent">*****</string>
    <string name="good">****</string>
    <string name="neutral">***</string>
    <string name="poor">**</string>
    <string name="bad">*</string>
    <string name="order_takeout">Order Takeout</string>
    <string name="distance">Distance</string>
    <string name="confirm">Confirm</string>
    <string name="filter">Filter</string>
    <string name="open_now">Open Now</string>
    <string name="order_delivery">Order Delivery</string>

    <!--<string-array name="miles">
        <Item>0.5 miles</Item>
        <Item>1.0 mile</Item>
        <Item>2.5 miles</Item>
        <Item>5.0 miles</Item>
        <Item>10.0 miles</Item>
    </string-array>
-->
    <!--End of fragment_filter strings-->

    <!-- start of fragment_search strings -->

    <string name="burgers">Burgers</string>
    <string name="italian">Italian</string>
    <string name="mexican">Mexican</string>
    <string name="japanese">Japanese</string>
    <string name="chinese">Chinese</string>
    <string name="thai">Thai</string>
    <string name="pizza">Pizza</string>

</resources>
