<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Filter"
            android:layout_gravity="center_horizontal"
            android:textSize="32dp"
            android:textColor="#ffffff"/>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/rating_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar2"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/selection_rating" />

    <LinearLayout
        android:id="@+id/rating_checkboxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating_text"
        android:layout_margin="4dp"
        android:padding="4dp" >

        <CheckBox android:id="@+id/four_star"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/good"/>

        <CheckBox android:id="@+id/three_star"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/neutral"/>

        <CheckBox android:id="@+id/two_star"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/poor"/>

        <CheckBox android:id="@+id/one_star"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/bad"/>
    </LinearLayout>

    <TextView
        android:id="@+id/prices_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating_checkboxes"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/selection_p" />

    <LinearLayout
        android:id="@+id/prices_checkboxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prices_text"
        android:layout_margin="4dp"
        android:padding="4dp" >

        <CheckBox android:id="@+id/four_dollar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/costly"/>

        <CheckBox android:id="@+id/three_dollar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/average"/>

        <CheckBox android:id="@+id/two_dollar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cheap"/>

        <CheckBox android:id="@+id/one_dollar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/v_cheap"/>
    </LinearLayout>

    <TextView
        android:id="@+id/open_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_below="@+id/prices_checkboxes"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="Open Now" />

    <Switch
        android:id="@+id/open_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_below="@+id/prices_checkboxes"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:textColorHighlight="@color/colorAccent" />

    <TextView
        android:id="@+id/delivery_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_below="@+id/open_text"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="Order Delivery" />

    <Switch
        android:id="@+id/order_delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_below="@+id/open_text"
        android:layout_margin="4dp"
        android:padding="4dp" />

    <TextView
        android:id="@+id/takeout_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_below="@+id/delivery_text"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="Order Takeout" />

    <Switch
        android:id="@+id/order_takeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_below="@+id/delivery_text"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:checked="false" />

    <TextView
        android:id="@+id/distance_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/order_takeout"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="Distance" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance_text"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/half_m"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0.5 Miles" />

        <RadioButton
            android:id="@+id/one_m"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="1 Mile" />

        <RadioButton
            android:id="@+id/twoFive_m"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="2.5 Miles" />

        <RadioButton
            android:id="@+id/five_m"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="5 Miles" />
    </RadioGroup>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="@color/secondaryColor"
        android:text="CONFIRM" />

</RelativeLayout>
